testsuite/tests/checks/max_identifier_length/test.out
test.adb:2:4: error: identifier too long
2 |    This_Is_A_Very_Very_Very_Long_Variable_Name : Integer := 42;  --  FLAG
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

test.adb:4:14: error: identifier too long
4 |    procedure This_Is_A_Very_Very_Very_Long_Subprogam_Name is null;  --  FLAG
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

test.adb:6:9: error: identifier too long
6 |    type This_Is_A_Very_Very_Very_Long_Type_Name is null record;  --  FLAG
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

